# MOthman-Prime-ERP

./: .env  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  update_design.cjs  vite.config.ts
.lovable/: plan.md
.orchids/: orchids.json
data/food_choice_import/: README.md  barcodes_clean.csv  customers_clean.csv  issues_report.json  prices_clean.csv  products_clean.csv  profile_report.json  review_needed.csv  salesmen_clean.csv  stock_batches_clean.csv
docs/: platform-packaging.md
scripts/: create-dev-users.mjs  import-food-choice-master-data.mjs  import-food-choice-product-master.mjs  prepare-food-choice-product-master.mjs
scripts/lib/: readUtf8Csv.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppBrand.tsx  BatchDetails.tsx  BottomNav.tsx  BrandSection.tsx  ExpiryIndicator.tsx  FilterChipGroups.tsx  FilterDropdownBar.tsx  LanguageToggle.tsx  MovingBadge.tsx  PageTransition.tsx  PdfImportSection.tsx  PreviewModeBanner.tsx  ProductRow.tsx  ReportsMenu.tsx  RoleGuard.tsx  StockStatusBadge.tsx  StorageBadge.tsx  TopBar.tsx  WheelPicker.tsx
src/config/: appUrl.ts  dashboardRegistry.ts  navConfig.ts  rolePermissions.ts  workflowConfig.ts
src/contexts/: LanguageContext.tsx  PreviewModeContext.tsx  StockContext.tsx  ThemeContext.tsx
src/data/: mockUsers.ts  stockData.ts
src/hooks/: useAuth.tsx  useBarcodeScanner.ts  usePermissions.ts  useStock.ts  (+1 more)
supabase/: config.toml
(+135 files in other folders)
