[package]
name = "food_choice_erp"
version = "0.0.0"
description = "Food Choice ERP desktop shell"
authors = ["Mohamed Othman"]
edition = "2021"

[lib]
name = "food_choice_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
